Added configuration classes:
* Added BaseConfiguration class
* Added Configuration class
* Added Repository class
* Added ChildConfiguration class
* Added Instance class
* Added Disk class
* Updated README to include configuration example
* Updated PHPMD confiugration to exclude StaticAccess & TooManyPublicMethods
* Added needed unit tests (64 tests, 70 assertions, 100% coverage)

--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "phploc": "./vendor/bin/phploc --progress --count-tests --exclude='vendor' ./",
         "phpmd": "./vendor/bin/phpmd source/ text phpmd.xml.dist",
         "phpunit": "./vendor/bin/phpunit",
-        "all-tests": [
+        "dev-tests": [
             "@phplint",
             "@phpunit",
             "@phpmd",
