Implement changes for PHAR building:
* Added GSnapUp shell script to handle Linux shell usage
* Updated GSnapUp script:
    * Removed shell script shebang line
    * Handel autoloader include for both in project and stand-alone
    * Define GIT tag-based automated versioning
* Updated composer config:
    * Add configurations for PHAR building
    * Add scripts for installing and running PHAR builder
* Updated GIT ignore to include version file & PHAR output
* Updated README to provide a project definition

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         }
     },
     "bin": [
+        "bin/gsnapup",
         "bin/gsnapup.php"
     ],
     "scripts": {
@@ -56,6 +57,24 @@
             "@phpcpd",
             "@phpcs",
             "@phploc"
-        ]
+        ],
+        "install:pharbuilder": "@composer global require macfja/phar-builder",
+        "build:phar": "phar-builder package ./composer.json"
+    },
+    "extra": {
+        "phar-builder": {
+            "name": "gsnapup.phar",
+            "compression": "none",
+            "entry-point": "bin/gsnapup.php",
+            "include": [ "bin" ],
+            "output-dir": "./",
+            "events": {
+                "command.package.start" : "git describe --tags > bin/version.txt",
+                "command.package.end": [
+                    "rm bin/version.txt",
+                    "chmod +x gsnapup.phar"
+                ]
+            }
+        }
     }
 }
