--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -35,6 +35,7 @@
     </filter>
 
     <logging>
+        <log type="coverage-text"   target="php://stdout" showUncoveredFiles="true"/>
         <log type="coverage-clover" target="tests/logs/coverage.xml"/>
         <log type="coverage-text"   target="tests/logs/coverage.txt" showUncoveredFiles="true"/>
         <log type="coverage-html"   target="tests/logs/report" charset="UTF-8" highlight="false" lowUpperBound="40" highLowerBound="75"/>
